SERVER-50549 transform state-changing errors returned by mongos